Fix page overflow on 1-distribution, flex issues.

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -22,7 +22,6 @@ html, body {
 }
 
 body {
-    overflow-x:hidden;
     padding-top: 6%;
     font-family: "Roboto", sans-serif;
     background-color: var(--tertiaryColor);
